horizontal scroll fix

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,9 @@
   margin: 0;
   box-sizing: border-box;
 }
+body {
+  overflow-x: hidden;
+}
 body,
 html {
   width: 100vw;
